<resources>
    <string name="app_name">Surdenic</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_user">Usuario</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">El password es incorrecto</string>
    <string name="error_field_required">El campo es requerido</string>
    <string name="login_failed">El usuario o la contraseña son inválidos!</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_inicio_ruta">Inicio Ruta</string>
    <string name="nav_cliente">Clientes</string>
    <string name="nav_facturas">Facturas</string>
    <string name="nav_sincronizacion">Sincronización</string>
    <string name="nav_configuracion">Configuración</string>
    <string name="nav_acerca">Acerca de</string>
    <string name="nav_info_ruta">Información Ruta</string>
    <string name="nav_producto">Productos</string>
    <string-array name="nav_item_activity_titles">
        <item>Inicio Ruta</item>
        <item>Clientes</item>
        <item>Facturas</item>
        <item>Productos</item>
        <item>Sincronización</item>
        
        <item>Acerca de</item>
    </string-array>
    <string name="action_search">Buscar</string>
    <string name="action_refresh">Refrescar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connection_failed">Favor revise su conexión a Internet.</string>
    <string name="btn_inicia_ruta">Iniciar Ruta</string>
    <string name="carga_clientes">Clientes</string>
    <string name="carga_facturas">Facturas</string>
    <string name="carga_catalogos">Catálogos</string>
    <string name="carga_parametros">Parámetros</string>
    <string name="carga_descuentos">Cartelera</string>
    <string name="error_descarga_clientes">Error en descarga de clientes</string>
    <string name="error_descarga_facturas">Error en descarga de facturas</string>
    <string name="error_descarga_departamentos">Error en descarga de departamentos</string>
    <string name="error_descarga_municipios">Error en descarga de municipios</string>
    <string name="error_descarga_canales_distribucion">Error en descarga de canales de distribución</string>
    <string name="error_descarga_fuerza_venta">Error en descarga de fuerzas de venta</string>
    <string name="error_descarga_rutas_trabajo">Error en descarga de rutas de trabajo</string>
    <string name="error_descarga_tipos_pago">Error en descarga de tipos de pagos</string>
    <string name="error_descarga_maestro_precios">Error en descarga de maestro de precios</string>
    <string name="error_descarga_parametros">Error en descarga de parámetros App</string>
    <string name="error_descarga_productos">Error en descarga de productos</string>
    <string-array name="razon_visita_no_exitosa">
        <item>No visitó por falta de tiempo</item>
        <item>El cliente o Encargado no se encontraba</item>
        <item>El cliente no podía recibir</item>
        <item>Cliente cerrado temporalmente</item>
        <item>Cliente cerrado definitivamente</item>
        <item>Cliente no existe</item>
        <item>Cliente no realizó pedido</item>
        <item>Otro motivo</item>
    </string-array>
    <string-array name="razon_cobro_no_exitoso">
        <item>El encargado de pago no se encontraba</item>
        <item>El cliente no tiene dinero</item>
        <item>El cliente no tiene chequera</item>
        <item>Pendiente de bonificación o descuento</item>
        <item>Pendiente nota de crédito</item>
        <item>Pagará con transferencia</item>
        
    <item>Otro motivo</item>
</string-array>
<string name="titulo_cliente">Cliente</string>
<string name="titulo_factura">Factura</string>
<string name="titulo_cobro">Registrar Cobro</string>
<string name="titulo_pedido">Registrar Pedido</string>
<string name="titulo_producto">Producto</string>
    <string name="cliente_cedula">Cédula:</string>
    <string name="cliente_tipo">Tipo:</string>
    <string name="cliente_codigo">Código:</string>
    <string name="cliente_titulo_contaco">Información de Contacto</string>
    <string name="cliente_empresa">Empresa:</string>
    <string name="cliente_direccion">Dirección:</string>
    <string name="cliente_barrio">Barrio:</string>
    <string name="cliente_departamento">Departamento</string>
    <string name="cliente_municipio">Municipio</string>
    <string name="cliente_telefono">Teléfono:</string>
    <string name="cliente_nombre">Cliente:</string>
    <string name="cliente_negocio">Negocio:</string>
    <string name="cliente_titulo_cuenta">Información de Cuenta</string>
    <string name="cliente_limite_credito">Límite Crédito</string>
    <string name="cliente_dias_credito">Días Crédito</string>
    <string name="cliente_balance_actual">Balance Actual</string>
    <string name="cliente_factor_incremento">Factor Incremento</string>
    <string name="cliente_titulo_facturas">Facturas Actuales</string>
    <string name="seleccion_razon">Seleccione razón:</string>
    <string name="breve_descripcion">Breve descripción:</string>
    <string name="registro_visita_no_exitosa">Visita no exitosa registrada con éxito.</string>
    <string name="actualiza_registro_visita_no_exitosa">Visita no exitosa actualizada con éxito.</string>
    <string name="elimina_registro_visita_no_exitosa">Visita no exitosa eliminada con éxito.</string>
    <string name="registro_cobro_no_exitoso">Cobro no exitoso registrada con éxito.</string>
    <string name="actualiza_registro_cobro_no_exitoso">Cobro no exitoso actualizado con éxito.</string>
    <string name="elimina_registro_cobro_no_exitoso">Cobro no exitoso eliminada con éxito.</string>
    <string name="registro_cobro">Cobro registrado con éxito.</string>
    <string name="actualizo_cobro">Cobro actualizado con éxito.</string>
    <string name="boton_actualizar">Actualizar</string>
    <string name="boton_eliminar">Eliminar</string>
    <string name="error_guardar_registro">Error al crear el registro.</string>
    <string name="sub_menu_visita_no_exitosa">Visita no exitosa</string>
    <string name="sub_menu_pedido">Registrar Pedido</string>
    <string name="sub_menu_cobro">Registrar cobro</string>
    <string name="sub_menu_cobro_no_exitosa">Cobro no exitoso</string>
    <string name="cantidad_producto_title">Producto Seleccionado</string>
    <string name="sub_menu_cliente_todos">Todos</string>
    <string name="sub_menu_cliente_sin_visitar">No sincronizados</string>
    <string name="sub_menu_cliente_visitados">Sincronizados</string>
    <string name="sub_menu_sincronizacion">Sincronizar todo</string>
    <string name="sub_menu_descargar_inventario">Actualizar inventario</string>
    <string name="sub_menu_descargar_cartelera">Actualizar cartelera e Inventario</string>
    <string name="sub_menu_elimina_pedido">Eliminar</string>
    <string name="sub_menu_negociacion_pedido">Negociación especial</string>
    <string name="factura_numero">No. Factura: </string>
    <string name="factura_titulo_info">Información Factura</string>
    <string name="factura_fecha">Fecha Emisión:</string>
    <string name="factura_fecha_vence">Fecha Vencimiento:</string>
    <string name="factura_total_vendido">Monto Vendido:</string>
    <string name="factura_monto_abonado">Monto Abonado:</string>
    <string name="factura_monto_pc">Monto por Cobrar:</string>
    <string name="factura_card_total_vendido">Facturado:</string>
    <string name="factura_card_monto_abonado">Abonado:</string>
    <string name="factura_card_monto_pc">Saldo:</string>
    <string name="boton_guardar">Guardar</string>
    <string name="creada_por">Desarrollada por Jensoft</string>
    <string name="boton_cantidad">Guardar</string>
    <string name="digite_cantidad">Digite Cantidad</string>
    <string name="sinc_visitas_no_exitosas">Sincronizar visitas no exitosas</string>
    <string name="sinc_visitas_no_exitosas_desc">Enviar visitas no exitosas registradas</string>
    <string name="sinc_cobros_no_exitosos">Sincronizar cobros no exitosos</string>
    <string name="sinc_cobros_no_exitosos_desc">Enviar cobros no exitosos registrados</string>
    <string name="sinc_cobros_exitosos">Sincronizar cobros exitosos</string>
    <string name="sinc_cobros_exitosos_desc">Enviar cobros exitosos registrados</string>
    <string name="sinc_pedidos">Sincronizar pedidos</string>
    <string name="sinc_pedidos_desc">Enviar pedidos registrados</string>
    <string name="alert_dilog_title_visitas_no_exitosas">Enviar visitas no exitosas</string>
    <string name="alert_dilog_title_cobros_no_exitosos">Enviar cobros no exitosos</string>
    <string name="alert_dilog_title_cobros">Enviar cobros</string>
    <string name="alert_dilog_title_pedidos">Enviar pedidos</string>
    <string name="alert_dialog_title_todos">Enviar todos</string>
    <string name="messages_send_data">¿Está seguro que desea enviar la información al servidor?</string>
    <string name="messages_send_data_positive">Si</string>
    <string name="messages_send_data_negative">No</string>
    <string name="progress_diaog_title_visitas_no_exitosas">Enviando visitas no exitosas</string>
    <string name="visitas_no_exitosas_vacias">No hay visitas no exitosas registradas para envío</string>
    <string name="visitas_no_exitosas_enviadas">Las visitas no exitosas se han enviado con éxito.</string>
    <string name="progress_diaog_message">Envío en progreso</string>
    <string name="progress_dialog_error">Error en el envío de la información</string>
    <string name="progress_diaog_title_cobros_no_exitosas">Enviando cobros no exitosas</string>
    <string name="cobros_no_exitosas_vacias">No hay cobros no exitosos registrados para envío</string>
    <string name="cobross_no_exitosos_enviadas">Las cobros no exitosos se han enviado con éxito.</string>
    <string name="progress_diaog_title_cobros_exitosos">Enviando cobros</string>
    <string name="progress_diaog_title_pedidos_exitosos">Enviando pedidos</string>
    <string name="progress_diaog_title_datos">Enviando información</string>
    <string name="cobros_exitosos_enviados">Las cobros se han enviado con éxito.</string>
    <string name="pedidos_exitosos_enviados">Los pedidos se han enviado con éxito.</string>
    <string name="cobros_exitosos_vacias">No hay cobros registrados para envío</string>
    <string name="pedidos_vacias">No hay pedidos registrados para envío</string>
    <string name="informacion_enviada_exito">La información se ha enviado con éxito.</string>
    <string name="progress_diaog_title_descarga_ruta">Descargando información de ruta</string>
    <string name="progress_diaog_message_download">Descarga en progreso</string>
    <string name="progress_diaog_message_borrado">Borrado en progreso</string>
    <string name="codigo">Código:</string>
    <string name="precio_producto">Precio:</string>
    <string name="existencia_producto">Existencia:</string>
    <string name="empaque_producto">Empaque:</string>
    <string name="cant_pedida_producto_selecc">Cant. Pedida:</string>
    <string name="cant_vendida_producto_selecc">Cant. Vendida:</string>
    <string name="subtotal_desc_producto_selecc">Subtotal:</string>
    <string name="total_desc_producto_selecc">Total Desc.:</string>
    <string name="total_iva_producto_selecc">Total I.V.A.:</string>
    <string name="total_facturado_producto_selecc">Total:</string>
    <string name="porcenatje_desc_producto_selecc">% Desc.:</string>
    <string name="string_detalle">Detalle:</string>
    <string name="producto">Producto:</string>
    <string name="producto_codigo">Código:</string>
</resources>