<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundApp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:textStyle="bold"
        android:letterSpacing="0.1"
        android:text="@string/sub_menu_cobro_no_exitosa"
        android:textColor="@android:color/white"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="@color/card_background" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:textColor="@color/card_background"
        android:text="@string/seleccion_razon"/>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/factura_razon_cobro_no_exitoso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:textColor="@color/logoColor"
        android:textColorHint="@color/logoColor"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:textColor="@color/card_background"
        android:text="@string/breve_descripcion"

        />

    <EditText
        android:id="@+id/factura_nota_cobro_no_exitoso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:fontFamily="sans-serif"
        android:inputType="textMultiLine"
        android:lines="3"
        android:minLines="3"
        android:textColor="@color/logoColor"
        android:textColorHint="@color/logoColor" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right">

        <Button
            android:id="@+id/button_guardar_cobro_no_exitoso"
            style="?android:textAppearanceSmall"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="10dp"
            android:text="@string/boton_guardar"
            android:textStyle="bold" />


        <Button
            android:id="@+id/button_eliminar_cobro_no_exitosa"
            style="?android:textAppearanceSmall"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="right"
            android:enabled="false"
            android:text="@string/boton_eliminar"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>