<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/card_background"
            android:text="@string/codigo"/>

        <TextView
            android:id="@+id/item_codigo_producto"
            android:layout_marginStart="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/card_background"/>


    </LinearLayout>


    <TextView
        android:id="@+id/item_nombre_producto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/card_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/card_background"
            android:text="@string/existencia_producto"/>

        <TextView
            android:id="@+id/item_existencia_producto"
            android:layout_marginStart="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/card_background"/>




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/card_background"
                android:text="@string/empaque_producto"/>

            <TextView
                android:id="@+id/item_empaque_producto"
                android:layout_marginStart="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/card_background"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:layout_marginEnd="10dp"
            android:gravity="end">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/card_background"
                android:text="@string/precio_producto"/>

            <TextView
                android:id="@+id/item_precio_producto"
                android:layout_marginStart="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/card_background"/>


        </LinearLayout>


    </LinearLayout>


</LinearLayout>